package(default_visibility = ["//visibility:public"])

# persistence unit test

java_test(
    name = "sqlite_access_test",
    srcs = [
        "persistence/SQLiteAccessTest.java",
    ],
    resources = glob(["resources/**/*"]),
    deps = [
        "@maven//:junit_junit",

        "//lib/mosaic-database",
        "//lib/mosaic-utils/test/junit",
    ],
    test_class = "org.eclipse.mosaic.lib.database.persistence.SQLiteAccessTest",
)

java_test(
    name = "sqlite_reader_test",
    srcs = [
        "persistence/SQLiteReaderTest.java",
    ],
    resources = glob(["resources/**/*"]),
    deps = [
        "@maven//:junit_junit",

        "//lib/mosaic-database",
        "//lib/mosaic-utils/test/junit",
    ],
    test_class = "org.eclipse.mosaic.lib.database.persistence.SQLiteReaderTest",
)

# road unit test

java_test(
    name = "connection_test",
    srcs = [
        "road/ConnectionTest.java",
    ],
    resources = glob(["resources/**/*"]),
    deps = [
        "@maven//:junit_junit",

        "//lib/mosaic-database",
        "//lib/mosaic-geomath",
    ],
    test_class = "org.eclipse.mosaic.lib.database.road.ConnectionTest",
)

java_test(
    name = "node_test",
    srcs = [
        "road/NodeTest.java",
    ],
    resources = glob(["resources/**/*"]),
    deps = [
        "@maven//:junit_junit",

        "//lib/mosaic-database",
        "//lib/mosaic-geomath",
    ],
    test_class = "org.eclipse.mosaic.lib.database.road.NodeTest",
)

java_test(
    name = "restriction_test",
    srcs = [
        "road/RestrictionTest.java",
    ],
    resources = glob(["resources/**/*"]),
    deps = [
        "@maven//:junit_junit",

        "//lib/mosaic-database",
        "//lib/mosaic-geomath",
    ],
    test_class = "org.eclipse.mosaic.lib.database.road.RestrictionTest",
)

java_test(
    name = "roundabout_test",
    srcs = [
        "road/RoundaboutTest.java",
    ],
    resources = glob(["resources/**/*"]),
    deps = [
        "@maven//:junit_junit",

        "//lib/mosaic-database",
        "//lib/mosaic-geomath",
    ],
    test_class = "org.eclipse.mosaic.lib.database.road.RoundaboutTest",
)

java_test(
    name = "way_test",
    srcs = [
        "road/WayTest.java",
    ],
    resources = glob(["resources/**/*"]),
    deps = [
        "@maven//:junit_junit",

        "//lib/mosaic-database",
        "//lib/mosaic-geomath",
    ],
    test_class = "org.eclipse.mosaic.lib.database.road.WayTest",
)

# route unit test

java_test(
    name = "route_test",
    srcs = [
        "route/RouteTest.java",
    ],
    resources = glob(["resources/**/*"]),
    deps = [
        "@maven//:junit_junit",

        "//lib/mosaic-database",
        "//lib/mosaic-geomath",
    ],
    test_class = "org.eclipse.mosaic.lib.database.route.RouteTest",
)

# spatial unit test

java_test(
    name = "edge_finder_test",
    srcs = [
        "spatial/EdgeFinderTest.java",
    ],
    resources = glob(["resources/**/*"]),
    deps = [
        "@maven//:junit_junit",

        "//lib/mosaic-database",
        "//lib/mosaic-geomath",
        "//lib/mosaic-utils/test/junit",
        "//lib/mosaic-geomath/test/junit",
    ],
    test_class = "org.eclipse.mosaic.lib.database.spatial.EdgeFinderTest",
)

java_test(
    name = "node_finder_test",
    srcs = [
        "spatial/NodeFinderTest.java",
    ],
    resources = glob(["resources/**/*"]),
    deps = [
        "@maven//:junit_junit",

        "//lib/mosaic-database",
        "//lib/mosaic-geomath",
        "//lib/mosaic-utils/test/junit",
        "//lib/mosaic-geomath/test/junit",
    ],
    test_class = "org.eclipse.mosaic.lib.database.spatial.NodeFinderTest",
)

# database unit test

java_test(
    name = "database_test",
    srcs = [
        "DatabaseTest.java",
    ],
    resources = glob(["resources/**/*"]),
    deps = [
        "@maven//:junit_junit",

        "//lib/mosaic-database",
        "//lib/mosaic-geomath",
    ],
    test_class = "org.eclipse.mosaic.lib.database.DatabaseTest",
)