load("@io_bazel_rules_docker//java:image.bzl", "java_image")
load("@io_bazel_rules_docker//lang:image.bzl", container_image = "app_layer")

package(default_visibility = ["//visibility:public"])

java_test(
    name = "docker_client_test",
    srcs = [
        "DockerClientTest.java",
        ],
    deps = [
        "//lib/mosaic-docker:mosaic-docker",
        "@maven//:org_mockito_mockito_core",
        "@maven//:junit_junit",
    ],
    test_class = "org.eclipse.mosaic.lib.docker.DockerClientTest",
)